[project]
name = "tulip-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.3.0",
    "psycopg[binary,pool]>=3.3.3",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff"
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
